# taco

./: .gitignore  .pre-commit-hooks.yaml  README.md  TAACOnoGUI.py  pyproject.toml
scripts/: build_binary_pyinstaller.sh  build_install_homebrew.sh  calibrate_signatures.py  calibrate_signatures.sh  install_precommit_hook.sh  lint_markdown_taco.sh  taco_entrypoint.py  verify_install_plane.sh
specs/: calibration-of-signatures.md
taco_tool/: __init__.py  __main__.py  buildinfo.py  cli.py  engine.py  markdown.py  signatures.py
taco_tool/signature_data/: __init__.py  cohesion_signatures.json
